# katago-webgpu

./: .gitignore  README.md  WEBGPU_STATUS.md
cpp/: CMakeLists.txt
cpp/kataeval/: CMakeLists.txt  backend_cpu.cpp  backend_gpu.cpp  backends.h  dispatch.cpp  kataeval.cpp  kataeval.h  sources-search.txt  sources.txt
cpp/neuralnet/: webgpubackend.cpp  webgpukernels.cpp  webgpukernels.h
python/katago/train/: modelconfigs.py
scripts/: bench-webgpu.sh  build-eval.sh  build-threadtest.sh  build-web.sh  build-webgpu.sh  serve-demo-tls.sh  serve-demo.sh
web/: engine.cpp  test-eval.mjs  test-gumbel.mjs  test-handicap.mjs  test-optimism.mjs  test-search-mt.mjs  test-sgf-parse.mjs  threadtest.cpp  wasm_smoke.cpp
web/demo/: analyze.html  index.html  kata-worker.js  threadtest.html
